--- a/analysis_documentation_visit_scotland/analysis_data.Rmd
+++ b/analysis_documentation_visit_scotland/analysis_data.Rmd
@@ -36,6 +36,10 @@ tourism_day_visits_location_clean
 tourism_day_visits_transport_clean
 ```
 
+```{r}
+visit_sites_activity
+
+```
 
 
 
@@ -69,6 +73,7 @@ tourism_demographic_location_activities %>%
   filter(breakdown_of_domestic_tourism == 'Expenditure') %>% 
   arrange(year,desc (value))
 ```
+
 _Ejemplos_
 bar_char
 
@@ -102,8 +107,9 @@ Q1. Higest income for Scotland in 2019
 
 ```{r}
 tourism_day_visits_activities_clean %>%
-  select(year,units,value,tourism_activity) %>%
+  select(year,units,value,tourism_activity, breakdown_of_domestic_tourism) %>%
   filter(tourism_activity != 'All') %>% 
+  filter(breakdown_of_domestic_tourism =='Expenditure') %>% 
   filter(year == 2019) %>% 
   arrange(desc(year)) %>% 
    ggplot(aes( x =reorder(tourism_activity,value), y = value))+
@@ -134,7 +140,7 @@ _Filter by year_
 tourism_day_visits_activities_clean %>%
   select(year,units,value,tourism_activity) %>% 
   filter(year == 2019) %>% 
-  arrange(desc(year))
+  arrange(desc(value))
 ```
 
  _Filter by year_  between 2019 -2013
@@ -152,12 +158,38 @@ Q2 _Which kind of activity generates the most visits to sites?_
 First. where go people and where they spend their money
 
 ```{r}
-tourism_day_visits_location_clean %>% 
-  select(year, value, type_of_location_visited, breakdown_of_domestic_tourism) %>% 
+tourism_day_visits_activities_clean %>% 
   filter(breakdown_of_domestic_tourism != 'Expenditure') %>% 
   filter(year == 2019) %>% 
-   arrange(desc(value))
+  filter(tourism_activity != 'All') %>% 
+   arrange(desc(value)) %>% 
+ggplot(aes( x =reorder(tourism_activity,value), y = value))+
+  geom_col(fill = "light blue", #colour = "purple",
+           position = 'dodge')+
+  labs(title = 'GB Visits by Tourism Activity in 2019' )+
+  xlab('Activity' )+
+  ylab('million Visit' )+
+  coord_flip()
 ```
+
+```{r}
+tourism_day_visits_activities_clean %>% 
+  filter(breakdown_of_domestic_tourism != 'Expenditure') %>% 
+  filter(tourism_activity != 'All') %>% 
+   arrange(desc(value)) %>% 
+ggplot(aes( x = year, y = value, fill = tourism_activity, label = value))+
+  geom_bar(stat = 'identity')+
+  geom_text(size = 3, position = position_stack(vjust = 0.5))+
+labs(
+    title = "GB Visits by Tourism Activity in Scotland  2013 -2019",
+    x = "\nyear",
+    y = "Millions visits\n") +
+   scale_x_continuous(breaks = 2013:2019)+
+  theme_update(plot.title = element_text(hjust = 0.445))
+```
+
+
+Location!!!!!
 
 ```{r}
 tourism_day_visits_location_clean %>% 
@@ -191,7 +223,7 @@ tourism_day_visits_location_clean %>%
   ylab('million pounds' )+
   coord_flip()
 ```
- -Answer_ Correlation between area visited and millions pounds expenditure for 2019
+ _Answer_ Correlation between area visited and millions pounds expenditure for 2019
  From 2013 to 2019
  
 ```{r}
@@ -228,7 +260,7 @@ labs(
    scale_x_continuous(breaks = 2013:2019)+
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
-_Answer_ this voisualization see the evolution for the period 2013 - 2019 the visits in city/ large town has fallen but the expenditure there has increase in the last year. the Rural countryside shows the opposite the expenditure has decrease but  the visits has increase from 2018.
+_Answer_ this visualization see the evolution for the period 2013 - 2019 the visits in city/ large town has fallen but the expenditure there has increase in the last year. the Rural countryside shows the opposite the expenditure has decrease but  the visits has increase from 2018.
 
 It can be observed   that for the year 2019  visits and expenditure are correlated except for the values Village/Rural countryside. In happens as well in the year 2018, 2014
 
@@ -241,7 +273,7 @@ tourism_day_visits_location_clean
 tourism_day_visits_location_clean %>% 
   select(year, value, type_of_location_visited, breakdown_of_domestic_tourism) %>% 
   filter(breakdown_of_domestic_tourism != 'Visits') %>% 
-  filter(year == 2014) %>% 
+  #filter(year == 2014) %>% 
    arrange(desc(value))
 ```
  
@@ -299,6 +331,7 @@ labs(
     y = "millions visits\n") +
   coord_flip()+
   theme_update(plot.title = element_text(hjust = 0.5))
+  
 ```
 
 Years- Age-Millions
@@ -338,7 +371,6 @@ labs(
 ```
 
 
-summarise?? para que salgan juntos todos los anos.
 
 ```{r}
 tourism_day_visits_demmographics_clean %>% 
@@ -423,7 +455,7 @@ labs(
     scale_x_continuous(breaks = 2013:2019)
 ```
 
-# Childrens? NO! very interesting! 
+## Childrens? NO! Thanks very interesting! 
 ```{r}
 tourism_day_visits_demmographics_clean %>% 
   filter(year == 2019) %>% 
@@ -455,7 +487,7 @@ labs(
 ```
 _Answer_ Spend more without Kids in all years
 
-# Millions Expenditure by employment_status.
+## Millions Expenditure by employment_status.
 The gross part is, obviously, spend by employed / self-employed persons. We can questioning about the consequences about the fact that 715 millions are spend by unemployed or not working people, maybe this total amount is the reflection of students plus retired people. Segun los datos hay 998 millones que no se saben donde estan o que no han respondido
 
 ```{r}
@@ -503,7 +535,7 @@ tourism_day_visits_demmographics_clean %>%
  ggplot(aes( x = social_grade, y = value ))+
   geom_col(fill = "light blue")+
 labs(
-    title = "GB Expenditure By Socil Grade in Scotland 2019",
+    title = "GB Expenditure By Social Grade in Scotland 2019",
     x = "\n Social Grade",
     y = "millions Pounds\n") +
     scale_colour_brewer(guide = "none", palette = "Set2")
@@ -530,7 +562,8 @@ _Answer_. so Young couples, maybe more females  with good salaries/ highest empl
 
 
 Q4 _What type of locations receive the most visits? What kinds of locations do people spend the most in?_ 
-# tourism_day_visits_location_clean + tourism_day_visits_activities_clean = answer question2!!!!!!
+
+# tourism_day_visits_location_clean + tourism_day_visits_activities_clean = answer question2!!!!!! THere are no enough information to combine 'tourism activity' and 'type of location visited'. Has to be the visualizations in Q2!!
 
 ```{r}
 visit_sites_activity
@@ -542,9 +575,17 @@ visit_sites_activity
 ```{r}
 visit_sites_activity %>%
   filter(breakdown_of_domestic_tourism == 'Visits') %>% 
-  filter(type_of_location_visited != 'NA') %>% 
-  filter(year ==2013) %>% 
-  arrange(year, tourism_activity)
+  filter(type_of_location_visited != 'All areas') %>% 
+  filter(tourism_activity != c('All', 'NA')) %>% 
+  #filter(year ==2019) %>% 
+  arrange(year, tourism_activity) %>% 
+ggplot(aes( x = type_of_location_visited, y = value))+
+  geom_col(fill = "light blue")+
+labs(
+    title = "GB visits by location  in Scotland 2019",
+    x = "\n",
+    y = "millions Pounds\n")
+
 ```
 
 There is a 'problem' the maths doesnt work for 2013  the 124 million visits 'All areas' is unequal to the sum of different locations. Without filter NA there are a lot of more information = millions visits lost. I show the first one by year and the first one with tourism activity.
@@ -594,16 +635,7 @@ visit_sites_activity %>%
   filter(year== 2013) %>% 
   arrange( tourism_activity)
 ```
-Total vale of All "types_of_location_visited" (124) is different to the independent sum of the each value, check what they say in the web. But I think the answer is that one person can visited multiple location. It is the same even you dont filter NA.  
-
-
-
-
-
-
-
-
-
+Total value of All "types_of_location_visited" (124) is different to the independent sum of the each value, check what they say in the web. But I think the answer is that one person can visited multiple location. It is the same even you dont filter NA.  
 
 
 
@@ -659,18 +691,21 @@ tourism_day_visits_transport_clean %>%
   coord_flip()
 ```
 
-En 2019 el transporte por avion solo trajo poco menos de millon y medio de visitas ( 10 puesto0) pero a cambio trajo 123 millones de  libras(7 puesto). Planes is more to arrive to any airport and later take a hired vehicle , taxi.... so its a way to arrive to scotland more than travel around the country.
+En 2019 el transporte por avion solo trajo poco menos de millon y medio de visitas ( 10 puesto) pero a cambio trajo 123 millones de  libras(7 puesto). Planes is more to arrive to any airport and later take a hired vehicle , taxi.... so its a way to arrive to scotland more than travel around the country.
 
 How travel people and their expenditure in relation
+
+
+
 
 Q6 _When looking at regional tourism, what insights can we gain? Where are our visitors from? How do they differ in the money they spend, nights they spend in Scotland, or number of visits they do?_
 
 ```{r}
 regional_domestic_tourism_clean
 ```
-Issues : the year is an average of 3 years , All GB means England, Scotland and Wales. But its only, Scotland and England in observations but not Wales and its difficult to substract  this country from 'All GB'
 
-I am not interested!!!!!!
+Issues : The year is an average of 3 years , All GB means England, Scotland and Wales. But its only, Scotland and England in observations but not Wales and its difficult to substract  this country from 'All GB'
+
 ```{r}
 regional_domestic_tourism_clean %>% 
   group_by(breakdown_of_domestic_tourism) %>% 
@@ -711,7 +746,7 @@ Unfortunately no works a Data viz with geom_point to many areas
 ```{r}
 regional_domestic_tourism_clean %>% 
   select( area ,year, value, units,region_of_residence,breakdown_of_domestic_tourism ) %>% 
- #group_by(area) %>% 
+
   filter(year == '2017-2019') %>% 
   filter(region_of_residence == 'All of GB') %>% 
   filter(area != 'Scotland') %>% 
@@ -724,7 +759,6 @@ regional_domestic_tourism_clean %>%
   xlab('Scottish Region' )+
   ylab('million pounds' )+
   coord_flip()
-  
 ```
 What could we deduce? it is not how to arrive, the Western Islands ( Na h-Elleanan Siar) is over regions of the 'Central bell' it is the offer fro activities
 
@@ -854,6 +888,58 @@ scottish_accomodation_occupancy_clean %>%
 ```
 
 
+Try to do a grouped barchart
+Group barchart by ocupation type
+
+```{r}
+scottish_accomodation_occupancy_clean %>%
+  select(area,year,value,accommodation_type_and_occupancy,location, weekday_weekend) %>% 
+  filter(year == 2019) %>% 
+  filter(location == 'All') %>% 
+  filter(weekday_weekend != 'All') %>% 
+  group_by(accommodation_type_and_occupancy) %>% 
+  arrange(desc(value),accommodation_type_and_occupancy) %>% 
+  ggplot(aes(fill= weekday_weekend, y=value, x=accommodation_type_and_occupancy)) + 
+    geom_bar(position="dodge", stat="identity")+
+ labs(
+    title ="Occupancy by Accomodation Type in Scotland  in 2019",
+    x = "\n Accomodation Type",
+    y = "Percentage Over Total Occupancy\n") +
+   coord_flip()+
+  theme_update(plot.title = element_text(hjust = 1))
+```
+Cheap travels for long weekends.
+Note: difference Room and Bed occupancy, no clear but I  understand that Room means the number of occupants per room but Bed  means the number of occupants in a room per size bed = 1 single bed and 1 double bed  means 3 max occupants
+
+Group barchart by  total occupation period time
+
+```{r}
+scottish_accomodation_occupancy_clean %>%
+  select(area,year,value,accommodation_type_and_occupancy,location, weekday_weekend) %>% 
+  #filter(accomodation_type_and_occupancy == 'All') %>% 
+  filter(location == 'All') %>% 
+  filter(weekday_weekend != 'All') %>% 
+  group_by(accommodation_type_and_occupancy) %>% 
+  arrange(desc(value),accommodation_type_and_occupancy) %>% 
+  ggplot(aes(fill= weekday_weekend, y=value, x=year)) + 
+    geom_bar(position="dodge", stat="identity")+
+ labs(
+    title = " Total Occupancy  in Scotland period 2011- 2019",
+    x = "\n Accomodation Type",
+    y = "Percentage Over Total Occupancy\n") +
+   scale_x_continuous(breaks = 2011:2019)+
+  theme(axis.text.x = element_text(angle = 25, hjust = 1))
+```
+
+
+
+
+
+
+
+
+
+
 Q8 _How have general tourism rates changed over time?_
 
 
@@ -967,6 +1053,220 @@ tourism_day_visits_transport_clean %>%
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
+Q8 _How have general tourism rates changed over time?_
+ _OCCUPANCY_
+Change over the years, different size of the occupancy by its type
+```{r}
+#To avoid problems because there are too many points: group_by and summarise
+scottish_accomodation_occupancy_clean %>% 
+  group_by(accommodation_type_and_occupancy, year) %>% 
+  summarise( average_occupancy = mean(value)) %>% 
+ggplot(aes( x = year, y = average_occupancy, colour = accommodation_type_and_occupancy))+
+  geom_line() +
+  facet_wrap(~accommodation_type_and_occupancy, scales = 'free_y')+
+labs(
+    title = "GB Occupancy in Scotland between 2011 -2019",
+    x = "\nYear",
+    y = "Average occupancy\n") +
+    scale_colour_brewer(guide = "none", palette = "Set2")+
+   scale_x_continuous(breaks = 2011:2019)+
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+
+
+```{r}
+scottish_accomodation_occupancy_clean %>% 
+  ggplot(aes( x = accommodation_type_and_occupancy))+
+  geom_bar(fill = "light blue", colour = "red")+
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+ _VISITS/LOCATIONS_
+In general we see there is a tendency to a slowly fall in the visits for all GB to Scotland. This fact is more clear in 'urban' areas or where it could be more visitors.
+
+```{r}
+tourism_day_visits_location_clean %>% 
+  filter(breakdown_of_domestic_tourism =='Visits') %>% 
+  group_by(type_of_location_visited, year) %>% 
+  summarise( average_visits = mean(value)) %>% 
+ggplot(aes( x = year, y = average_visits, colour = type_of_location_visited))+
+  geom_line() +
+  facet_wrap(~type_of_location_visited, scales = 'free_y')+
+labs(
+    title = "GB Visits By Location in Scotland between 2011 -2019",
+    x = "\nYear",
+    y = "Average visits\n") +
+    scale_colour_brewer(guide = "none", palette = "Set2")+
+   scale_x_continuous(breaks = 2011:2019)+
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+
+_DEMOGRAPHICS_
+By age, each year is different, for 2019 the data show that mostly all the age groups falland the only two that grow significantly , 65 or older and 35-44 years old , are under the mark of their beat year that was 2016.
+
+```{r}
+tourism_day_visits_demmographics_clean %>% 
+  select(breakdown_of_domestic_tourism, age, value,year) %>% 
+  filter(age != 'All') %>% 
+  filter(breakdown_of_domestic_tourism == 'Visits') %>% 
+  ggplot(aes( x = year, y = value, colour = age))+
+  geom_line()+
+  labs(
+    title = "GB Visitors Age in Scotland between 2011 -2019",
+    x = "\nYear",
+    y = "Average Thousand visits\n") +
+   scale_colour_brewer( palette = "Set2")+
+   scale_x_continuous(breaks = 2013:2019)
+```
+
+_TRANSPORT_
+
+```{r}
+tourism_day_visits_transport_clean %>% 
+  filter(breakdown_of_domestic_tourism == 'Visits') %>% 
+  filter(method_of_travel != 'All') %>% 
+  filter(year == 2019) %>% 
+  ggplot(aes( x = method_of_travel, y = value))+
+  geom_col(fill = "light blue", colour = "red")+
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))+
+  labs(
+    title = "GB Visits transport in Scotland between 2011 -2019",
+    x = "\nMethod of Travel",
+    y = "Millions visits\n")
+```
+
+
+
+
+
+
+```{r}
+tourism_day_visits_transport_clean %>% 
+  select(method_of_travel,breakdown_of_domestic_tourism, value,year) %>% 
+  filter(method_of_travel != 'All') %>% 
+  filter(breakdown_of_domestic_tourism == 'Visits') %>% 
+  ggplot(aes( x = year, y = value, colour = method_of_travel))+
+  geom_line()+
+  labs(
+    title = "GB Visitors Transport in Scotland between 2011 -2019",
+    x = "\nYear",
+    y = "millions visits\n") +
+   scale_x_continuous(breaks = 2013:2019)
+```
+
+
+```{r}
+tourism_day_visits_transport_clean %>% 
+  select(method_of_travel,breakdown_of_domestic_tourism, value,year) %>% 
+  filter(method_of_travel != 'All') %>% 
+  filter(breakdown_of_domestic_tourism == 'Visits') %>% 
+  ggplot(aes( x = year, y = value, colour = method_of_travel))+
+  geom_line()+
+   facet_wrap(~method_of_travel, scales = 'free_y')+
+  labs(
+    title = "GB Visitors Transport in Scotland between 2011 -2019",
+    x = "\nYear",
+    y = "millions visits\n") +
+   scale_x_continuous(breaks = 2013:2019)+
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+```{r}
+tourism_day_visits_transport_clean %>% 
+  select(method_of_travel,breakdown_of_domestic_tourism, value,year) %>% 
+  filter(method_of_travel != 'All') %>% 
+  filter(breakdown_of_domestic_tourism == 'Expenditure') %>% 
+  ggplot(aes( x = year, y = value, colour = method_of_travel))+
+  geom_line()+
+   facet_wrap(~method_of_travel, scales = 'free_y')+
+  labs(
+    title = "GB Visitors Transport Expenditure in Scotland between 2011 -2019",
+    x = "\nYear",
+    y = "millions Pounds\n") +
+   scale_x_continuous(breaks = 2013:2019)+
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+
+```{r}
+tourism_day_visits_transport_clean %>% 
+  select(method_of_travel,breakdown_of_domestic_tourism, value,year) %>% 
+  filter(method_of_travel != 'All') %>% 
+  filter(breakdown_of_domestic_tourism == 'Expenditure') %>% 
+  ggplot(aes( x = year, y = value, fill = method_of_travel))+
+  geom_col()+
+   #facet_wrap(~method_of_travel, scales = 'free_y')+
+  labs(
+    title = "GB Visitors Transport Expenditure in Scotland between 2011 -2019",
+    x = "\nYear",
+    y = "millions Pounds\n") +
+   scale_x_continuous(breaks = 2013:2019)+
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+Q9
+
+Spending/ Visits
+```{r}
+tourism_day_visits_activities_clean
+```
+
+
+```{r}
+predict_spend <- tourism_day_visits_activities_clean
+predict_spend
+```
+
+
+My year is not a date is number Should I change to date? NO necessary. How to change my tibble to a tsibble for prediction
+
+```{r}
+predict_spend <- predict_spend %>% 
+  select(year, breakdown_of_domestic_tourism,tourism_activity,value = value) %>% 
+  filter(breakdown_of_domestic_tourism == 'Expenditure')
+  #tibble::rowid_to_column() %>% 
+  # mutate(year = as.Date(year, '2011-01-01')) %>% 
+  #group_by(year,tourism_activity) %>% 
+  as_tsibble(index = year, key = tourism_activity )
+predict_spend
+```
+
+```{r}
+predict_spend %>% 
+  filter(tourism_activity == 'All') %>% 
+  ggplot()+
+  geom_line(aes(x = year, y = value ), colour = "blue")+
+  labs(
+    title = "GB  Expenditure in Scotland between 2013 -2019",
+    x = "\nYear",
+    y = "millions Pounds\n") +
+   scale_x_continuous(breaks = 2013:2019)
+```
+
+predict_visits.
+```{r}
+predict_visits <- tourism_day_visits_activities_clean
+```
+```{r}
+predict_visits %>% 
+  select(year, breakdown_of_domestic_tourism,tourism_activity,value = value) %>% 
+  filter(breakdown_of_domestic_tourism == 'Visits') %>% 
+   filter(tourism_activity == 'All') %>% 
+  ggplot()+
+  geom_line(aes(x = year, y = value ), colour = "blue")+
+  labs(
+    title = "GB Total Tourism Activity Visits in Scotland between 2013 -2019",
+    x = "\nYear",
+    y = "millions Visits\n") +
+   scale_x_continuous(breaks = 2013:2019)
+```
+
+There were a peak in 2017 in visits to tourism_activity and expenditure, after there are a decrease in total number of visits but a decrease in expenditure. That could means an increase of price of the activities, less offer?. Less tourism but more money or visitors with more/ higher purchasing power
+
+
+
 
 
 
@@ -1003,7 +1303,7 @@ predict_spend %>%
 
 
 _Extension_
-Decission Tree Age-expenditure
+Decission Tree Age-expenditure. Didnt work NO Enough Data
 
 
 
